--- a/index.htm
+++ b/index.htm
@@ -90,7 +90,7 @@
             </div>
 
             <footer>
-                Email:SamuelHarlanoOjSb@yahoo.com
+                Email:HedyUptonnEuL@yahoo.com
             </footer>
         </div>
         
